kubernetes/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stellar-web-service
  namespace: default
spec:
  selector:
    app: stellar
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: stellar-web
    protocol: TCP
    port: 80
    targetPort: 8080
