kubernetes/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stellar-web-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: pki.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stellar-web-service
            port:
              number: 80
